2nd review - footer horizontal scroll was fixed

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,7 @@
     display: -ms-flex;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     max-width: 1184px;
     padding: 92px 0 24px 0;
